# llm-zoomcamp

./: pyproject.toml
llm_zoomcamp/: docker-compose.yml
llm_zoomcamp/home_works/.ipynb_checkpoints/: homework1-checkpoint.ipynb
